@startuml er

' hide the spot
hide circle

' avoid problems with angled crows feet
' skinparam linetype ortho

entity "User" {
    userID : number
    name : string
    bio : string
    password : string
}

entity "Task" {
    ID : number
    name : string
    description : string
    isPrivate : boolean
}

entity "UserTask" {
    ID : number
    startTime : number 
    endTime : number
    duration : number
    --
    userID : number
    taskID : number
}

entity "Tag"{
    ID : number
    name : string

}

entity "TaskTag"{
    ID : number
    --
    taskID : number
    tagID : number
}

UserTask ||..o{ User
UserTask ||..o{ Task

TaskTag ||..o{ Task
TaskTag ||..o{ Tag 
@enduml
